<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ShoppingWithFriends</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_registration">registration</string>
    <string name="title_activity_main_screen">MainScreenActivity</string>
    <string name="title_activity_login">Log in</string>
    <string name="view_friends">View Friends</string>
    <string name="register">Register</string>
    <string name="enter_friend_username">Enter friend username…</string>
    <string name="enter_interest">Enter item…</string>
    <string name="enter_price">Enter max price to pay…</string>
    <string name="enter_item_location">Enter location of item…</string>
    <string name="enter_found_price">Enter price of item…</string>
    <string name="register_interest">Register Interest</string>
    <string name="confirm">Confirm</string>
    <string name="name_of_friend_goes_here">Name of friend goes here</string>"
    <string name="welcome_to_shopping_with_friends">Welcome to Shopping with Friends</string>
    <string name="post_sale">Post Sale</string>
    <string name="rating">Rating: </string>
    <string name="reports_given">Reports given:</string>
    <string name="back">Back</string>
    <string name="remove_friend">Remove Friend</string>
    <string name="new_text">New Text</string>
    <string name="add_friend">Add Friend</string>
    <string name="current_deals">Current Deals</string>
    <string name="home">Home</string>
    <string name="return_string">Return</string>
    <string name="view_on_map">View on Map</string>

    <!-- Strings used on registration page -->
    <string name="registration">Registration</string>
    <string name="email">Email:</string>
    <string name="username">Username:</string>
    <string name="password">Password:</string>
    <string name="confirm_password">Confirm:</string>
    <string name="first_name">First Name:</string>
    <string name="last_name">Last Name:</string>

    <!-- Strings related to login -->
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="logout">Log out</string>
    <string name="title_activity_friends_list">FriendsList</string>
    <string name="credential_preference_string">me.teamkevin.shoppingWithFriends.USER_LOGIN_INFO</string>
    <string name="title_activity_register_interest">RegisterInterestActivity</string>
    <string name="title_activity_maps">Map</string>

</resources>
