<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="shopping.Activities.PostSaleActivity">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/scrollView"
        android:layout_alignParentEnd="false"
        android:fillViewport="false">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:weightSum="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/post_sale"
                android:id="@+id/post_sale_text_view"
                android:layout_gravity="center_horizontal" />

            <EditText
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/item_edit_text"
                android:layout_marginTop="47sp"
                android:hint="@string/enter_interest"
                android:focusable="true"
                android:inputType="text"
                android:enabled="true"
                android:focusableInTouchMode="true" />

            <EditText
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:ems="10"
                android:id="@+id/price_edit_text"
                android:layout_marginTop="30sp"
                android:hint="@string/enter_found_price"
                android:enabled="true"
                android:focusable="true"
                android:focusableInTouchMode="true" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:ems="10"
                android:id="@+id/location_edit_text"
                android:layout_marginTop="30sp"
                android:hint="@string/enter_item_location"
                android:enabled="true"
                android:focusable="true"
                android:focusableInTouchMode="true" />

        </LinearLayout>
    </ScrollView>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="45sp"
        android:layout_below="@+id/scrollView"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="41sp"
        android:id="@+id/relativeLayout">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/confirm"
            android:id="@+id/confirm_button"
            android:onClick="onConfirmClick"
            android:layout_marginEnd="24sp"
            android:layout_alignParentTop="true"
            android:layout_toStartOf="@+id/return_button" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/return_string"
            android:id="@+id/return_button"
            android:onClick="onReturnClick"
            android:layout_marginEnd="80sp"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true" />

    </RelativeLayout>

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/view_on_map"
        android:id="@+id/button3"
        android:onClick="onButtonPress"
        android:layout_below="@+id/relativeLayout"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="75sp" />

</RelativeLayout>
