<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="shopping.Activities.MainScreenActivity">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/logout"
        android:id="@+id/logout_button"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:onClick="onReturnPress"
        android:layout_toEndOf="@+id/textView10" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/view_friends"
        android:id="@+id/view_friends_button"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:onClick="viewFriends"
        android:layout_alignEnd="@+id/textView10" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView10"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/current_deals"
        android:id="@+id/textView11"
        android:textSize="30sp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register_interest"
        android:id="@+id/register_interest_button"
        android:onClick="onRegisterInterestPress"
        android:layout_above="@+id/view_friends_button"
        android:layout_alignParentStart="true"
        android:layout_alignEnd="@+id/view_friends_button" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/post_sale"
        android:id="@+id/post_sale_button"
        android:onClick="onPostSalePress"
        android:layout_above="@+id/logout_button"
        android:layout_alignEnd="@+id/logout_button"
        android:layout_toEndOf="@+id/textView10" />

    <ListView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/sales_list_view"
        android:layout_centerHorizontal="true"
        android:layout_above="@+id/register_interest_button"
        android:layout_below="@+id/textView11" />

</RelativeLayout>