<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="shopping.Activities.RegisterInterestActivity"
    android:id="@+id/main_relative_layout">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:id="@+id/scrollView"
        android:layout_alignParentEnd="false" >

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/register_interest"
                android:id="@+id/register_interest_text_view"
                android:layout_gravity="center_horizontal" />

            <EditText
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/interest_edit_text"
                android:layout_marginTop="47sp"
                android:hint="@string/enter_interest"
                android:focusable="true"
                android:inputType="text"
                android:enabled="true"
                android:focusableInTouchMode="true" />

            <EditText
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:ems="10"
                android:id="@+id/price_edit_text"
                android:layout_marginTop="30sp"
                android:hint="@string/enter_price"
                android:enabled="true"
                android:focusable="true"
                android:focusableInTouchMode="true" />

        </LinearLayout>
    </ScrollView>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="194sp"
        android:id="@+id/button_relative_layout">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/confirm"
            android:id="@+id/confirm_button"
            android:onClick="onConfirmClick"
            android:layout_marginEnd="24sp"
            android:layout_alignParentTop="true"
            android:layout_toStartOf="@+id/return_button" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/return_string"
            android:id="@+id/return_button"
            android:onClick="returnFromActivity"
            android:layout_marginEnd="80sp"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true" />
    </RelativeLayout>

</RelativeLayout>
